@@ -12,6 +12,7 @@ c - crash     b - bug fix    e - enhancement    f - new feature
   f - Linux 2.6 cpuset support  (in development)
   e - new job array submission syntax
   b - fixed so SIGUSR1 / SIGUSR2 to correctly change the log level
+  f - health check script can now be run at job start and end
 
 2.2.1
   b - fix a bug where dependent jobs get put on hold when the previous job has
